# move_ranking

./: .env  .gitignore  database.py  main.py  movie_db_api.py  pyproject.toml  rate_movie.py
src/: database.py  movie_db_api.py  rate_movie.py  select_movie_service.py
static/css/: styles.css
templates/: edit.html  index.html  select.html
