[project]
name = "day-64-starting-files-top-movies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bootstrap-flask==2.2.0",
    "dotenv>=0.9.9",
    "flask==2.3.2",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.1",
    "requests==2.31.0",
    "sqlalchemy==2.0.25",
    "werkzeug==3.0.0",
    "wtforms==3.0.1",
]
